in form-inline mode, remove label margin-bottom to avoid bad vertical alignment (in case some entries have no attr "title")

--- a/app/public/app.css
+++ b/app/public/app.css
@@ -170,6 +170,9 @@ fieldset {
 .form-inline .the-label {
     display: none;
 }
+.form-inline label {
+    margin-bottom: 0;
+}
 
 .my-radio-inline {
     padding-top: 5px;
